fix(ui): OLED dark mode

--- a/frontend/src/app/features/book/components/book-browser/book-card/book-card.component.scss
+++ b/frontend/src/app/features/book/components/book-browser/book-card/book-card.component.scss
@@ -66,7 +66,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
   width: 100%;
   height: 100%;
   background: radial-gradient(circle, rgb(0 0 0 / 0%) 25%, rgb(0 0 0 / 60%) 100%);
